--- a/themes/ghostwriter/layouts/partials/extra-in-head.html
+++ b/themes/ghostwriter/layouts/partials/extra-in-head.html
@@ -1,1 +1,11 @@
+{{ $paginator := .Paginate (where .Site.RegularPages ".Params.post" "!=" false) }}
+{{ if .IsHome }}
+  {{ if eq $paginator.PageNumber 1 }}
+    <link rel="canonical" href="{{ .Permalink }}" />
+  {{ else }}
+    <link rel="canonical" href="{{ .Permalink }}page/{{ $paginator.PageNumber }}/" />
+  {{ end }}
+{{ else }}
+  <link rel="canonical" href="{{ .Permalink }}" />
+{{ end }}
 <base href="{{ .Site.BaseURL }}">
