Update table formatting

--- a/layouts/partials/extra-in-head.html
+++ b/layouts/partials/extra-in-head.html
@@ -8,4 +8,7 @@
 {{ else }}
   <link rel="canonical" href="{{ .Permalink }}" />
 {{ end }}
+{{ range .Site.Params.custom_css -}}
+    <link rel="stylesheet" href="{{ . | absURL }}">
+{{- end }}
 <base href="{{ .Site.BaseURL }}">
