Add Discord Server link in footer

--- a/layouts/partials/post-footer.html
+++ b/layouts/partials/post-footer.html
@@ -1,4 +1,7 @@
 <footer class="post-footer clearfix">
+  <hr>
+  <p>You can comment on this article or any other on the New Wayland blog on our <a href="https://discord.gg/JN6HKUd">Discord Server</a>. Pop in and say hello. We&rsquo;d love to see you.</p>
+  <p>If you liked the article please share on social media.</p>
     {{ if .Params.tags }}
         <p class="post-tags">
             <span>Tagged:</span>
